# _c_array_support

./: ALLOW_ZERO_SIZE_ARRAY.hpp  CMakeLists.txt  c_array_assign.hpp  c_array_support.hpp  meson.build  readme.md  util_traits.hpp
.github/workflows/: ci.yml
c_array_support/: c_array_compare.hpp
tests/: CMakeLists.txt
